# doc_storage

./: .gitignore  README.rst  conftest.py  pyproject.toml  pytest.ini
doc_storage/: db.sqlite3  manage.py
doc_storage/doc_storage/: asgi.py  settings.py  urls.py  wsgi.py
doc_storage/document_storage/: admin.py  forms.py  models.py  urls.py  views.py
doc_storage/document_storage/migrations/: 0001_initial.py  0002_documentversion_alter_document_versions.py  0003_remove_document_versions_documentversion_versions.py  0004_historicaldocument_delete_documentversion.py
doc_storage/document_storage/templates/document_storage/: base.html  create_document.html  details_document_page.html  first and current versions of document.html  first_and_current_versions_of_document.html  index_page.html  list_document_page.html  list_versions_of_document_page.html  update_document_page.html
doc_storage/document_storage/tests/: tests_views.py
doc_storage/project/: settings.py  urls.py
